--- a/doc/doc_src/data_structure.tex
+++ b/doc/doc_src/data_structure.tex
@@ -79,10 +79,22 @@ In order to make these classes accessible to JSON, it is necessary to add a new 
 A script, \verb|bin/user/json_branch_to_data_structure_and_cpp_processor.py| is available that analyses a JSON object or JSON tree of nested objects and converts to C++ classes. The script is provided "as-is" and it is expected that developers will check the output, adding comments and tests where appropriate.
 
 \subsection{Pointer Handling}
-MAUS can handle pointers for arrays and classes using ROOT native support or a reduced version compliant with the standard JSON reference syntax, where paths are indexed relative to the root value of a JSON document. JSON references are formatted like URIs, for example the JSON object \verb|{"$ref":"#spill/recon_events/1"}| would index the second recon_event in the spill object (indexing from 0). MAUS can only handle paths relative to the top level of the JSON document. In MAUS, it is necessary to make a distinction between data that is stored as a value in C++, data that is stored as a pointer in C++ and a pointer reference - that is a C++ pointer that references some pointer-as-data defined elsewhere in the data structure.
+MAUS can handle pointers for arrays and classes using ROOT native support or the standard JSON reference syntax. JSON references are indexed by a path relative to the root value of a JSON document. JSON references are formatted like URIs, for example the JSON object \verb|{"$ref":"#spill/recon_events/1"}| would index the second \verb|recon_event| in the spill object (indexing from 0). MAUS can only handle paths relative to the top level of the JSON document for the same MAUS event. Absolute URIs, URIs relative to another position in the JSON document or URIs to another MAUS event are not supported. 
 
-Conversion from C++ pointers to JSON pointers is handled in a type-safe way. Values-as-data are stored in the data tree converted at run time from JSON to C++ and vice versa. Pointers-as-data are handled in the same way as Values-as-data, but additionally an STL map is made. When converting from C++ to JSON, a map from the C++ pointer to the address of the JSON data is stored; when converting from JSON to C++ the map is in the opposite direction. The 
+In MAUS, it is necessary to make a distinction between data that is stored as a value in C++ and JSON (value-as-data), data that is stored as a pointer in C++ and a value in JSON (pointer-as-data) and data that is stored as a pointer in C++ and JSON to some other data in the same tree (pointer-as-reference). In the latter case, the C++ parent object does not own the memory; rather it is owned by some other object in the same tree and \emph{borrowed} by the C++ object holding the pointer-as-reference.
 
-JSON stores pointers as references to other parts of the data tree. This is implemented in MAUS as two concepts - when a C++ \emph{pointer} is converted to JSON, the data is stored in an STL map that maps the C++ pointer to the JSON address. JSON \emph{references} to a pointer is placed into an STL vector of references together with the path to the JSON reference. After the tree has been parsed, MAUS iterates over the vector of references and for each reference stored it looks up the JSON address and places this as a reference into the JSON tree. The conversion is fully templated and abstracted to ensure type safety. Conversion from JSON pointers to C++ pointers is handled similarly, except: the map must operate in the opposite direction, from JSON address to C++ pointer; and the vector must now store the JSON address of the reference, together with the (instantiated) C++ object and the mutator that would set the reference.
+Pointers-as-reference and pointers-as-data are converted from JSON arrays to C++ vectors and vice versa using the \verb|ReferenceArrayProcessor<ArrayContents>| and \verb|PointerArrayProcessor<ArrayContents>| classes respectively. Pointers-as-reference and pointers-as-data are converted from JSON objects to C++ classes and vice versa using \verb|ObjectProcessor<ParentType>::RegisterPointerReference<ChildType>| and \verb|ObjectProcessor<ParentType>::RegisterPointerValue<ChildType>| methods respectively.
 
+Other equivalent data formats, for example YAML, use a unique identifier to reference a pointer-as-reference and store the pointer-as-data in a reserved part of the data tree. There are some consequences of storing pointers-as-reference using the path to a pointer-as-data as implemented in MAUS.
+\begin{itemize}
+\item The user must specify which data is the primary data source (pointer-as-data) and which data is a cross reference (pointer-as-reference).
+\item Pointers-as-reference are position dependent. If the associated pointer-as-data is moved the pointer-as-reference can no longer be resolved. For example, inserting an element into an array can cause misalignment of pointers-as-reference.
+\item Pointer data will always be available at the location of the pointer-as-data in the JSON tree, even when using a parser that is not pointer aware.
+\item A unique identifier type algorithm can be implemented as a relatively simple extension of the data format outlined here; but it is relatively hard to extend a unique identifier algorithm to reference existing parts of the data tree.
+\end{itemize}
+
+\subsubsection{Pointer Resolution}
+Conversion from C++ pointers to JSON pointers is handled in a type-safe way. Values-as-data are stored in the data tree converted at run time from JSON to C++ and vice versa. Pointers-as-data are handled in the same way as Values-as-data. Pointers-as-references are stored in the C++ data tree as a pointer in the normal way, and in JSON as an address to the position in the tree to a pointer-as-data. It is an error to store a pointer-as-reference without storing an associated pointer-as-data as the pointer-as-reference cannot be converted, unless the pointer-as-reference is set to NULL (in which case it may be an error depending on caller settings). It is an error to store multiple C++ pointers-as-data to the same memory address as the conversion from C++ to JSON and back again would yield logically different data and the resolution of associated pointers-as-reference is dependent on the resolution order of the data tree, which is ill-defined.
+
+In order to implement the data conversion, the pointers have to be resolved in a two-stage process. In the first stage, it is necessary to collect all of the pointers-as-data and pointers-as-reference by traversing the data tree. This is performed during the standard data conversion, but pointers-as-reference are left pointing to NULL. A mapping from the pointer-as-data in the original data format to the pointer-as-data in the converted data format is stored, together with a list of pointers-as-reference in the original data format and the necessary mutators in the converted data format. In the second stage MAUS iterates over the pointers-as-reference, finds the appropriate pointer-as-data and writes the location of the pointer-as-data to the pointer-as-reference in the converted data format. The code is templated to maintain full type-safety during this process.
  
