Add time to mice mod envelope doc #586

--- a/doc/doc_src/mice_modules/mice_module_geometry.tex
+++ b/doc/doc_src/mice_modules/mice_module_geometry.tex
@@ -731,8 +731,9 @@ MAUS\_PrimaryGenHit} or \textit{G4BeamLine} to use a beam file.\\\hline
 {\itshape Pid} &
 int &
 The particle ID of particles in the envelope or beam.\\\hline
+{\itshape Time} & double &
+Set the time of the envelope reference trajectory\\\hline
 {\itshape Longitudinal}
-
 {\itshape Variable} &
 string &
 Set the longitudinal variable used to define the reference trajectory momentum. Options are \textit{Energy},
