--- a/RELEASENOTES
+++ b/RELEASENOTES
@@ -5,6 +5,12 @@ http://micewww.pp.rl.ac.uk/projects/maus/roadmap
 
 Release Notes
 =============
+MAUS-v0.4.1
+  The following functionality was added:
+    - JSON output format now supports references (internal links within JSON
+      documents)
+    - An API has been added for global (cross-detector) reconstruction routines.
+
 MAUS-v0.4.0
   The following functionality was added:
     - The API was updated to facilitate adding new modules to MAUS. New modules
