Updates to tracker doc

--- a/doc/doc_src/detectors/tracker/01-Current/00a-Title-page/00a-Title-page.tex
+++ b/doc/doc_src/detectors/tracker/01-Current/00a-Title-page/00a-Title-page.tex
@@ -1,20 +1,21 @@
-\begin{figure}
-  \leftline{
-    \includegraphics[width=0.05\textwidth,bb=0 0 1312 803]
-      {00a-Title-page/Figures/Tracker-sw-logo.jpg}
-  }
-  \vspace{2cm}
-\end{figure}
+
+\vspace*{3cm}
+
 \begin{center}
   {\bf\LARGE 
-    MICE tracker software documentation                       \\
+    \textsc{MICE Tracker Software Documentation}                      \\
   }
   \vspace{0.75cm}
   {\bf\it\Large The MICE tracker software team} \\
   \vspace{2cm}
 \end{center}
 
-\vspace{3cm}
+\vspace{2cm}
+
+\begin{figure}[h]
+    \includegraphics[width=0.5\textwidth,bb=0 0 500 200]
+      {00a-Title-page/Figures/Tracker-sw-logo.jpg}
+\end{figure}
 
 \begin{center}
   \vspace{3cm}
