--- a/doc/doc_src/detectors/tracker/01-Current/TkSw-Doc.tex
+++ b/doc/doc_src/detectors/tracker/01-Current/TkSw-Doc.tex
@@ -1,4 +1,4 @@
-\documentclass{article}
+\documentclass{99-Styles/IDS-NF}
 
 \input 99-Styles/GetPackages
 
@@ -23,7 +23,6 @@
 \cleardoublepage
 \tableofcontents
 \cleardoublepage
-
 
 \pagenumbering{arabic}                   
 \setcounter{page}{1}
