--- a/doc/doc_src/detectors/tracker/01-Current/99-Styles/GetPackages.tex
+++ b/doc/doc_src/detectors/tracker/01-Current/99-Styles/GetPackages.tex
@@ -6,5 +6,6 @@
 \usepackage{color}      % use if color is used in text
 \usepackage{subfigure}  % use for side-by-side figures
 \usepackage{hyperref}   % use for hypertext links, including those to external documents and URLs
+\usepackage{fullpage}   % enlarge the margins
 
 % \usepackage{fmtcount}   % Allow counters to be printed with padding
