--- a/doc/doc_src/detectors/tracker/01-Current/05-DataStructure/05-DataStructure.tex
+++ b/doc/doc_src/detectors/tracker/01-Current/05-DataStructure/05-DataStructure.tex
@@ -8,7 +8,7 @@ The tracker data structure, a subset of the general MAUS data structure, is show
 \begin{figure}[htb]
     \includegraphics[width=0.85\textwidth]
       {05-DataStructure/Figures/DataStructure.eps}
-    \caption{The tracker data structure and its position within the general MAUS data structure.}
+    \caption{The tracker data structure and its position within the general MAUS data structure.  An asterisk indicates a vector of pointers. The dotted lines indicate cross links realised as vectors of pointers.}
     \label{Fig:DataStructure}
 \end{figure}
 
