--- a/RELEASENOTES
+++ b/RELEASENOTES
@@ -5,6 +5,11 @@ http://micewww.pp.rl.ac.uk/projects/maus/roadmap
 
 Release Notes
 =============
+MAUS-v0.4.2
+  The following functionality was added:
+    - TOF calibration and cabling information is now indexed in the
+      configuration database
+
 MAUS-v0.4.1
   The following functionality was added:
     - JSON output format now supports references (internal links within JSON
