Better doc for beam

--- a/doc/doc_src/simulation.tex
+++ b/doc/doc_src/simulation.tex
@@ -29,7 +29,7 @@ The Penn beam ellipse is defined by,
 -\mathcal{L}+\beta_\perp B_0/2p & 0 & -\alpha_\perp & \gamma_\perp p \\
 \end{array}\right)
 \end{equation}
-where parameters can be controlled in datacards
+where parameters can be controlled in datacards as described below. Note that using the datacards it is possible to define a beam ellipse that is poorly conditioned (determinant nearly zero). In this case MAUS will print an error message like \verb|Warning: invalid value encountered in double_scalars| for each primary.
 
 \begin{table*}
 \begin{center}
