Use MAUS_VERSIONED_CLASS_DEF in datastructure + documented + auto script updated

--- a/doc/doc_src/data_structure.tex
+++ b/doc/doc_src/data_structure.tex
@@ -64,8 +64,8 @@ The data structure can be extended in MAUS by adding extra classes to the existi
 \item Add a new class in \verb|src/common_cpp/DataStructure|.
 \item Ensure that default constructor, copy constructor, equality operator and destructor is present. The destructor must be virtual.
 \item Make a typedef for each type of STL object you wish to use. ROOT does not handle STL objects terribly well otherwise. Even then there are limitations, for example accessing STL vector objects can cause a segmentation fault in PyROOT. Specific accessors are required to access data from STL objects for PyROOT interface.
-\item Add a call to the ClassDef() macro at the end of the class definition before the closing braces. The ClassDef() macro is defined by the ROOT \verb|Rtypes.h| header file, and generates metaclasses based on information in the class which is put into the (dynamically generated) \verb|MausDataStructure.h| class.
-\item Add the class to the list of classes in \verb|src/common_cpp/DataStructure/LinkDef.hh|. This is required for the class to be linked properly to the main library, and a linker error will result if this step is not taken.
+\item Add \verb|#include "src/common_cpp/Utils/VersionNumber.hh"| and a call to the \verb|MAUS_VERSIONED_CLASS_DEF()| macro at the end of the class definition before the closing braces. \verb|MAUS_VERSIONED_CLASS_DEF| calls the ROOT ClassDef() macro which generates metaclasses based on information in the class. This is put into the (dynamically generated) \verb|MausDataStructure.h,cc| files.
+\item Add the class to the list of classes in \verb|src/common_cpp/DataStructure/LinkDef.hh|. This is required for the class to be linked properly to the main library, and a linker error will result if this step is not taken. Also add any template definitions which you used, including STL classes (e.g. std::vector<MyClass> or whatever).
 \end{itemize}
 In order to make these classes accessible to JSON, it is necessary to add a new processor in \verb|src/common_cpp/JsonCppProcessors|. There are a few default processors available.
 \begin{itemize}
