--- a/doc/doc_src/introduction.tex
+++ b/doc/doc_src/introduction.tex
@@ -70,7 +70,7 @@ There are several other applications in the \verb|bin| directory and associated 
 By default, MAUS writes data as a ROOT file. ROOT is a widely available high energy physics data analysis library, available from \url{''http://root.cern.ch''} and prepacked with the MAUS third party libraries. Two techniques are foreseen for accessing the data, either using \verb|PyRoot| python interface or using a compiled C++ binary. Some mention of ROOT cint scripting tools is made below, but this is not supported by MAUS developers beyond the most basic usage.
 
 \subsection{Loading ROOT Files in Python Using PyROOT}
-The standard scripting tool in MAUS is python. The ROOT data structure can be loaded in python using the PyROOT package. An example of how to perform a simple analysis with PyROOT is available in \verb|bin/examples/load_root_file.py|. This example runs the reconstruction code to produce an output data file \verb|${MAUS_ROOT_DIR}/tmp/example_load_root_file.root| and then runs a toy analysis that plots digits at TOF1 for plane 0 and plane 1.
+The standard scripting tool in MAUS is python. The ROOT data structure can be loaded in python using the PyROOT package. An example of how to perform a simple analysis with PyROOT is available in \verb|bin/examples/load_root_file.py|. This example runs the reconstruction code to produce an output data file \verb|${MAUS_ROOT_DIR}/tmp/example_load_root_file.root| and then runs a toy analysis that plots digits at TOF1 for plane 0 and plane 1. This example produces two histograms, \verb|tof1_digits_0_load_root_file.png| and \verb|tof1_digits_1_load_root_file.png|.
 
 \subsection{Loading ROOT Files in C++ Compiled Analysis Code}
 The ROOT data structure can be loaded in C++ by compiling the Make file found in \verb|bin/examples/load_root_file_cpp/Makefile|. This compiles the sample analysis in \verb|bin/examples/load_root_file_cpp/load_root_file.cc|. For example,
