--- a/RELEASENOTES
+++ b/RELEASENOTES
@@ -5,6 +5,13 @@ http://micewww.pp.rl.ac.uk/projects/maus/roadmap
 
 Release Notes
 =============
+MAUS-v0.5.3
+  The following functionality was added:
+    - The ROOT version was updated to the latest version 5.34.07
+  If upgrading from a previous version, the following third party library
+  scripts need to be rerun
+    - third_party/bash/21root.bash
+
 MAUS-v0.5.2
   The following functionality was added:
     - An example was added for accessing the data structure from a standalone
