Add reducer to output tree for tof calib, tof documentation

--- a/doc/doc_src/maus_user_guide.tex
+++ b/doc/doc_src/maus_user_guide.tex
@@ -48,7 +48,7 @@
 \input{mice_modules/mice_module_geometry} % how to set up a geometry
 \input{mice_modules/mice_module_fields} % how to set up fields
 
-%\include{detectors/tof}
+\include{detectors/tof}
 %\include{detectors/tracker}
 %\include{detectors/emr}
 %\include{detectors/ckov}
