Fix failed VirtualPlaneTest

--- a/doc/doc_src/simulation.tex
+++ b/doc/doc_src/simulation.tex
@@ -209,9 +209,9 @@ A number of classes are provided for basic initialisation of GEANT4.
 \item MAUSGeant4Manager: is responsible for handling interface to GEANT4. MAUSGeant4Manager handles initialisation of the GEANT4 bindings as well as accessors for individual GEANT4 objects (see below). Interfaces are provided to run one or many particles through the geometry, returning the relevant event data. The MAUSGeant4Manager sets and clears the event action before each run.
 \item MAUSPhysicsList: contains routines to set up the GEANT4 physical processes. Datacards settings are provided to disable stochastic processes or all processes and set a few parameters. In the end, the physics list set up gets called by the FieldPhaser.
 \item FieldPhaser: the field phaser is a MAUS-specific tool for automatically phasing fields, for example RF cavities, such that they ramp coincidentally with incoming particles. The FieldPhaser contains routines to fire test ("reference") particles through the accelerator lattice and phase fields appropriately. The FieldPhaser phasing routines are called after GEANT4 is first initialised.
+\item DetectorConstruction: the DetectorConstruction routines provide an interface between the MAUS internal geometry representation encoded in MiceModules and GEANT4. DetectorConstruction is responsible for calling the relevant routines for setting up the general engineering geometry, calling detector-specific geometry set-up routines and calling the field map set-up routines.
 \item VirtualPlanes: the VirtualPlanes routines are designed to extract particle data from the GEANT4 tracking independently of the GEANT4 geometry. The VirtualPlanes routines watches for steps that step across some plane in physical space, or some time, or some proper time, and then interpolates from the step ends to the plane in question.
 \item FillMaterials: (legacy) the FillMaterials routines are used to initialise a number of specific 
-\item MICEDetectorConstruction: (legacy) the MICEDetectorConstruction routines provide an interface between the MAUS internal geometry representation encoded in MiceModules and GEANT4. MICEDetectorConstruction is responsible for calling the relevant routines for setting up the general engineering geometry, calling detector-specific geometry set-up routines and calling the field map set-up routines.
 \item MAUSVisManager the MAUSVisManager is responsible for handling interfaces with the GEANT4 visualisation.
 \end{itemize}
 
