Add note about CITATION file

--- a/doc/doc_src/introduction.tex
+++ b/doc/doc_src/introduction.tex
@@ -18,6 +18,9 @@ MAUS is intended to be used by physicists interested in studying the MICE data. 
 \section{Getting the Code and Installing MAUS}
 Installation is described in a separate document, available at \url{http://micewww.pp.rl.ac.uk/projects/maus/wiki/Install}
 
+\section{Citing MAUS}
+MAUS should be cited according to the guidelines in the file \verb|CITATION|.
+
 \section{Running MAUS}
 MAUS contains several applications to perform various tasks. Two main applications are provided. \verb|bin/simulate_mice.py| makes a Monte Carlo simulation of the experiment and \verb|bin/analyze_data_offline.py| reconstructs an existing data file. Start a clean shell and move into the top level MAUS directory. Then type
 \begin{verbatim}
