Fix typo in visualisation documentation

--- a/doc/doc_src/simulation.tex
+++ b/doc/doc_src/simulation.tex
@@ -290,7 +290,7 @@ Name & Meaning \\
 \verb|pi_plus_vis_colour| & Set the RGB values to alter the colour of positive pions.\\
 \verb|pi_minus_vis_colour| & Set the RGB values to alter the colour of negative pions.\\
 \verb|mu_plus_vis_colour| & Set the RGB values to alter the colour of positive muons.\\
-\verb|mu_minus_vis_colour| & Set the RGB values to alter the colour of negative pions.\\
+\verb|mu_minus_vis_colour| & Set the RGB values to alter the colour of negative muons.\\
 \verb|e_plus_vis_colour| & Set the RGB values to alter the colour of positrons.\\
 \verb|e_minus_vis_colour| & Set the RGB values to alter the colour of electrons.\\
 \verb|gamma_vis_colour| & Set the RGB values to alter the colour of gammas.\\
