--- a/doc/doc_src/maus_user_guide.tex
+++ b/doc/doc_src/maus_user_guide.tex
@@ -54,6 +54,9 @@
 %\include{detectors/ckov}
 %\include{detectors/kl}
 
+\input{envelope_tool} % envelope utility - could be an appendix
+
+
 %\chapter{Geometry}
 %\include{geometry_definitions}
 
