Add an example and expand the doc a little

--- a/doc/doc_src/envelope_tool.tex
+++ b/doc/doc_src/envelope_tool.tex
@@ -7,6 +7,15 @@ beams ellipses through those elements.
 
 The envelope tool is intended for use with mostly straight beamlines.
 
+\section{Example Usage}
+To call the envelope tool with some example data, source the MAUS environment 
+and then do
+
+\begin{verbatim}
+$ python ${MAUS_ROOT_DIR}/bin/utilities/envelope_tool/envelope_tool.py \
+  --configuration_file ${MAUS_ROOT_DIR/}bin/utilities/envelope_tool/share/pseudobeamline.py
+\end{verbatim}
+
 \begin{figure}[!htb]
 \centering
 \includegraphics[width=0.9\textwidth]{envelope_tool.png}
