More tracker doc updates

--- a/doc/doc_src/detectors/tracker/03-Reference-surfaces-and-coordinate-systems/03-Reference-surfaces-and-coordinate-systems.tex
+++ b/doc/doc_src/detectors/tracker/03-Reference-surfaces-and-coordinate-systems/03-Reference-surfaces-and-coordinate-systems.tex
@@ -10,7 +10,7 @@ The doublet-layer reference surface is defined to be the flat plane that is tang
   \begin{center}
     \includegraphics[width=0.7\linewidth] {detectors/tracker/03-Reference-surfaces-and-coordinate-systems/Figures/doublet-layer.pdf}
   \end{center}
-  \caption{ Reference surfaces and coordinate-system definitions for the double layer and station. a) The fibres in the doublet layer are shown as the shaded circles, the central channel being shaded pink. The mylar layer is indicated by the solid black corrugated line. The doublet-layer reference surface is indicated by the vertical straight line, the arrow labelled $\alpha$ indicates the direction in which the coordinate measured by the doublet layer ($u$, $v$ or $w$) increases. The direction of the $z_d$ axis is indicated. b) View of doublet layer looking down on the mylar layer with the optical connectors at the bottom of the figure. The coordinate measured by the doublet layer ($u$, $v$ or $w$) is indicated by the axis labelled $\alpha$. The orthogonal axis, i.e. the direction in which the fibres run, is labelled $\beta$. The origin of the $(\alpha, \beta)$ coordinate system is taken to be at the centre of the circular active area.}
+  \caption{ Reference surfaces and coordinate-system definitions for the double layer and station. a) The fibres in the doublet layer are shown as the shaded circles, the central channel being shaded pink. The mylar layer is indicated by the solid black corrugated line. The doublet-layer reference surface is indicated by the vertical straight line, the arrow labelled $\alpha$ indicates the direction in which the coordinate measured by the doublet layer ($x$, $v$ or $w$) increases. The direction of the $z_d$ axis is indicated. b) View of doublet layer looking down on the mylar layer with the optical connectors at the bottom of the figure. The coordinate measured by the doublet layer ($x$, $v$ or $w$) is indicated by the axis labelled $\alpha$. The orthogonal axis, i.e. the direction in which the fibres run, is labelled $\beta$. The origin of the $(\alpha, \beta)$ coordinate system is taken to be at the centre of the circular active area.}
   \label{Fig:DblLyrRef&Coord}
 \end{figure}
 
@@ -23,7 +23,7 @@ The station reference surface is defined to coincide with the reference surface 
   \begin{center}
     \includegraphics[width=0.22\linewidth]{detectors/tracker/03-Reference-surfaces-and-coordinate-systems/Figures/station.pdf}
   \end{center}
-  \caption{ The carbon-fibre station body is indicated by the heavy solid black lines. The three doublet layers are indicated by the solid grey ($u$), green ($w$) and blue ($v$) lines. The station reference surface is shown by the solid vertical line coincident with the reference surface of the doublet layer labelled $v$. The direction $y_s$ axis, defined to be coincident with the $v$ axis and the $z_s$ axes are shown as the solid, black arrows. The $x_s$ axis completes a right-handed coordinate system and therefore points into the page. }
+  \caption{ The carbon-fibre station body is indicated by the heavy solid black lines. The three doublet layers are indicated by the solid grey ($x$), green ($w$) and blue ($v$) lines. The station reference surface is shown by the solid vertical line coincident with the reference surface of the doublet layer labelled $v$. The direction $y_s$ axis, defined to be coincident with the $v$ axis and the $z_s$ axes are shown as the solid, black arrows. The $x_s$ axis completes a right-handed coordinate system and therefore points into the page. }
   \label{Fig:StnRef&Coord}
 \end{figure}
 
