--- a/doc/doc_src/detectors/tracker/04-Reconstruction/04-01-Hits-and-clusters/04-01-Hits-and-clusters.tex
+++ b/doc/doc_src/detectors/tracker/04-Reconstruction/04-01-Hits-and-clusters/04-01-Hits-and-clusters.tex
@@ -29,9 +29,9 @@ where the subscript $i$ indicates the $i^{\rm th}$ channel. The pulse-height for
 
 \begin{figure}
   \begin{center}
-    \includegraphics[width=0.9\linewidth]{detectors/tracker/04-Reconstruction/04-01-Hits-and-clusters/Figures/clusterRES.pdf}
+    \includegraphics[width=0.9\linewidth]{detectors/tracker/04-Reconstruction/04-01-Hits-and-clusters/Figures/cluster-resolution.pdf}
   \end{center}
-  \caption{Channel overlap as simulated in G4MICE; fine-tuning reduces the error associated to doublet clusters.} 
+  \caption{Channel overlap as simulated in MAUS; fine-tuning reduces the error associated to doublet clusters.} 
   \label{Fig:Clust}
 \end{figure}
 The ``measurement vector'', ${\bf m}$ is defined as:
