--- a/doc/doc_src/detectors/tracker/02-Definitions/02-Definitions.tex
+++ b/doc/doc_src/detectors/tracker/02-Definitions/02-Definitions.tex
@@ -9,7 +9,6 @@ The official labels for two trackers are:
   {\rm Upstream~tracker}   & \rightarrow & {\rm Tracker \# 1} \nonumber \\
   {\rm Downstream~tracker} & \rightarrow & {\rm Tracker \# 2} \nonumber 
 \end{eqnarray}
-
 The internals of the code however will frequently refer to the upstream tracker as 0, and the downstream tracker as 1. In this document, we will use the official convention.
 
 \subsection{Station numbering}
@@ -48,46 +47,48 @@ Each station consists of three ``doublet layers'' of 350\,$\mu$m scintillating f
   \leftline{
     \includegraphics[width=0.7\textwidth]{detectors/tracker/02-Definitions/Figures/doublet-layer.pdf}
   }
-  \caption{(a) Arrangement of the doublet layers in the scintillating-fibre  stations. The outer circle shows the solenoid bore while the inner circle shows the limit of the active area of the tracker. The grey, blue, and green regions indicate the direction that the individual 350\,$\mu$m fibres run (moving outward from the centre) in the $u$, $v$, and $w$ planes respectively. (b) Detail of the arrangement of the scintillating fibres in a doublet layer. The fibre spacing and the fibre pitch are indicated on the right-hand end of the figure in \,$\mu$m. The pattern of seven fibres ganged for readout in a single clear-fibre light-guide is shown in red. The sheet of Mylar glued to the doublet layer is indicated.}
+  \caption{(a) Arrangement of the doublet layers in the scintillating-fibre  stations. The outer circle shows the solenoid bore while the inner circle shows the limit of the active area of the tracker. The grey, blue, and green regions indicate the direction that the individual 350\,$\mu$m fibres run (moving outward from the centre) in the $x$, $v$, and $w$ planes respectively. (b) Detail of the arrangement of the scintillating fibres in a doublet layer. The fibre spacing and the fibre pitch are indicated on the right-hand end of the figure in \,$\mu$m. The pattern of seven fibres ganged for readout in a single clear-fibre light-guide is shown in red. The sheet of Mylar glued to the doublet layer is indicated.}
   \label{Fig:DblLyr}
 \end{figure}
 
 \subsubsection{Doublet-layer numbering}
 \label{SubSubSect:DblNmbrng}
 
-The order in which the doublet layers were glued onto the station body is shown in figure \ref{Fig:DblLyrOrder}. The $u$ layer was glued to the station body first. The doublet layer was glued such that the ``fibre side'' of the doublet layer was glued to the station body; i.e. the mylar sheet faces away from the station body. The $w$ layer was then glued onto the outer surface of the $u$ layer. The fibre side of the $w$ layer was glued to the mylar sheet of the $u$ layer such that the mylar sheet of the ``w'' layer also faces away from the station body. Finally, the $v$ layer was glued onto the assembly. The gluing arrangement was the same as for the $u$ and $w$ layers, i.e. the mylar sheet of the $v$ layer also faces away from the station body. The numbering of the layers, which follows the order in which the layers were glued onto the station body, is summarised in table \ref{Tab:DblLyrOrder}.
+The order in which the doublet layers were glued onto the station body is shown in figure~\ref{Fig:DblLyrOrder}. The $x$ layer was glued to the station body first. The doublet layer was glued such that the ``fibre side'' of the doublet layer was glued to the station body; i.e. the mylar sheet faces away from the station body. The $w$ layer was then glued onto the outer surface of the $x$ layer. The fibre side of the $w$ layer was glued to the mylar sheet of the $x$ layer such that the mylar sheet of the ``w'' layer also faces away from the station body. Finally, the $v$ layer was glued onto the assembly. The gluing arrangement was the same as for the $x$ and $w$ layers, i.e. the mylar sheet of the $v$ layer also faces away from the station body. 
+
+%The numbering of the layers, which follows the order in which the layers were glued onto the station body, is summarised in table \ref{Tab:DblLyrOrder}.
 
 \begin{figure}
   \begin{center}
     \includegraphics[width=0.65\linewidth]{detectors/tracker/02-Definitions/Figures/doublet-layer-order.pdf}
   \end{center}
-  \caption{ The order in which the doublet layers were glued onto the station body.The station body is indicated by the solid black lines. The $u$ layer (shown as the grey line was glued to the station body first. The $w$ (indicated by the green line) was then glued onto the outer surface of the $u$ layer.  The outer doublet layer, the $v$ layer (shown as the blue line) was then glued onto the assembly. The station reference surface and the direction of increasing $z$  are shown as the thin black lines.}
+  \caption{ The order in which the doublet layers were glued onto the station body.The station body is indicated by the solid black lines. The $x$ layer (shown as the grey line was glued to the station body first. The $w$ (indicated by the green line) was then glued onto the outer surface of the $x$ layer.  The outer doublet layer, the $v$ layer (shown as the blue line) was then glued onto the assembly. The station reference surface and the direction of increasing $z$  are shown as the thin black lines.}
   \label{Fig:DblLyrOrder}
 \end{figure}
 
-\begin{table}
-  \caption{Doublet-layer numbering scheme.  The doublet-layer ``number'' runs from 0 to 2. The correspondence between the doublet layer number and the  view is reported in the column labelled ``Doublet-layer number''.}
-  \label{Tab:DblLyrOrder}
-  \begin{tabular}{|l|r|}
-    \hline
-    {\bf View} & {\bf Double-layer number} \\
-    \hline
-    $u$        &                         0 \\
-    $w$        &                         1 \\
-    $v$        &                         2 \\
-    \hline
-  \end{tabular}
-\end{table}
+% \begin{table}
+%   \caption{Doublet-layer numbering scheme.  The doublet-layer ``number'' runs from 0 to 2. The correspondence between the doublet layer number and the  view is reported in the column labelled ``Doublet-layer number''.}
+%   \label{Tab:DblLyrOrder}
+%   \begin{tabular}{|l|r|}
+%     \hline
+%     {\bf View} & {\bf Double-layer number} \\
+%     \hline
+%     $x$        &                         0 \\
+%     $w$        &                         1 \\
+%     $v$        &                         2 \\
+%     \hline
+%   \end{tabular}
+% \end{table}
 
 \subsection{Fibre-channel numbering}
 \label{SubSect:FbrNmbrng}
 
-The numbering of the groups of seven fibres ganged for readout is shown in figure \ref{Fig:FbrChnlNmbrng}. With the mylar surface facing up, and with the tails leading out to the station connectors taken to be at the bottom of the figure, the fibre-channel increases from left to right. The coordinate measured by the doublet layer ($u$, $v$ or $w$) is taken to increase in the same direction as the channel number. The origin of the measured coordinate is taken to be at the position of the central fibre.
+The numbering of the groups of seven fibres ganged for readout is shown in figure \ref{Fig:FbrChnlNmbrng}. With the mylar surface facing up, and with the tails leading out to the station connectors taken to be at the bottom of the figure, the fibre-channel increases from right to left. The coordinate measured by the doublet layer ($x$, $v$ or $w$) is taken to increase in the same direction as the channel number. The origin of the measured coordinate is taken to be at the position of the central fibre.
 
 \begin{figure}
   \begin{center}
-    \includegraphics[width=0.75\linewidth]{detectors/tracker/02-Definitions/Figures/fibre-channel-numbering.pdf}
+    \includegraphics[width=0.85\linewidth]{detectors/tracker/02-Definitions/Figures/fibre-channel-numbering.pdf}
   \end{center}
-  \caption{The order in which fibre channels (groups of seven fibres) are numbered. The sensitive surface of the doublet layer is indicated by the solid circle. The direction in which the fibres run is indicated by the vertical lines. The station optical connectors are taken to be at the bottom of the figure as indicated. With the mylar sheet taken to be facing up, fibre-channel number 1 is to the left of the central fibre. The fibre-channel number increases from left to right. The ``zero'' of the coordinate ($u$, $v$ or $w$ increases) measured by the doublet layer is taken to be the position of the central fibre. The direction in which the coordinate measured by the double layer increases is indicated by the red arrow.}
+  \caption{The order in which fibre channels (groups of seven fibres) are numbered. The sensitive surface of the doublet layer is indicated by the solid circle. The direction in which the fibres run is indicated by the vertical lines. The station optical connectors are taken to be at the bottom of the figure as indicated. With the mylar sheet taken to be facing up, fibre-channel number 1 is to the left of the central fibre. The fibre-channel number increases from left to right. The ``zero'' of the coordinate ($x$, $v$ or $w$ increases) measured by the doublet layer is taken to be the position of the central fibre. The direction in which the coordinate measured by the double layer increases is indicated by the red arrow.}
   \label{Fig:FbrChnlNmbrng}
 \end{figure}
