More tracker doc updates

--- a/doc/doc_src/detectors/tracker.tex
+++ b/doc/doc_src/detectors/tracker.tex
@@ -1,8 +1,7 @@
 \chapter{The Trackers}
 \label{chapter:tracker}
 
-The chapter describes the software used to simulate and reconstruct the MICE scintillating fibre trackers.
-
+\input{detectors/tracker/01-Introduction/01-Introduction}
 \input{detectors/tracker/02-Definitions/02-Definitions}
 \input{detectors/tracker/03-Reference-surfaces-and-coordinate-systems/03-Reference-surfaces-and-coordinate-systems}
 \input{detectors/tracker/04-Reconstruction/04-Reconstruction}
