--- a/doc/doc_src/detectors/tracker/03-Reference-surfaces-and-coordinate-systems/03-Reference-surfaces-and-coordinate-systems.tex
+++ b/doc/doc_src/detectors/tracker/03-Reference-surfaces-and-coordinate-systems/03-Reference-surfaces-and-coordinate-systems.tex
@@ -1,8 +1,8 @@
 \section{Reference surfaces and coordinate systems}
-\label{Sect:RefSurf&CoordSysts}
+\label{Sect:SciFiRefSurf&CoordSysts}
 
 \subsection{Doublet layer}
-\label{SubSect:RefCoordDoublet}
+\label{SubSect:SciFiRefCoordDoublet}
 
 The doublet-layer reference surface is defined to be the flat plane that is tangential to the outer surface of the mylar plane as shown in Figure \ref{Fig:DblLyrRef&Coord}a. The measured coordinate, $\alpha \in {u, v, w}$, is defined to lie in this plane and the $\alpha$ axis is perpendicular to the direction in which the fibres run. The doublet-layer $z_d$ axis is defined to to be perpendicular to the doublet-layer reference surface increasing in the direction indicated in the figure. The direction in which the measured coordinate, $\alpha$ increases is indicated in figure \ref{Fig:DblLyrRef&Coord}b. The orthogonal coordinate in the doublet-layer reference surface that with $\alpha$ and $z_d$ completes a right handed coordinate system is referred to as $\beta$. The $\beta$ axis is also indicated in figure \ref{Fig:DblLyrRef&Coord}b.
 
@@ -15,7 +15,7 @@ The doublet-layer reference surface is defined to be the flat plane that is tang
 \end{figure}
 
 \subsection{Station}
-\label{SubSect:RefCoordStn}
+\label{SubSect:SciFiRefCoordStn}
 
 The station reference surface is defined to coincide with the reference surface of the $v$ doublet layer (see figure \ref{Fig:StnRef&Coord}). The station coordinate system is defined such that the $y_s$ axis is coincident with $v$ axis, the $z_s$ axis is coincident with the $z_d$ axis of the $v$ layer and the $x_s$ axis completes a right-handed coordinate system.
 
@@ -28,7 +28,7 @@ The station reference surface is defined to coincide with the reference surface 
 \end{figure}
 
 \subsection{Tracker}
-\label{SubSect:TrkrCoordStn}
+\label{SubSect:SciFiTrkrCoordStn}
 
 The tracker reference surface is defined to coincide with the reference surface of station 1. The tracker coordinate system is defined such that the $z_t$ axis coincides with the nominal axis of cylindrical symmetry of the tracker as shown in figure \ref{Fig:TrkRef&Coord}. The tracker $z_t$ coordinate increases from station 1 to station 5. The tracker $y_t$ axis is defined to coincide with the $y_s$ axis of station 1 and the tracker $x_t$ axis completes a right-handed coordinate system.
 
@@ -41,10 +41,10 @@ The tracker reference surface is defined to coincide with the reference surface 
 \end{figure}
 
 \subsection{Coordinate transformations}
-\label{SubSect:CoordTran}
+\label{SubSect:SciFiCoordTran}
 
 \subsubsection{Doublet-layer to station}
-\label{SubSubSect:DblStn}
+\label{SubSubSect:SciFiDblStn}
 
 The transformation from doublet-layer to station coordinates is achieved using the rotation $\underline{\underline{R}}_{SD}$ defined by: 
 
