--- a/doc/doc_src/detectors/tracker/04-Reconstruction/04-01-Hits-and-clusters/04-01-Hits-and-clusters.tex
+++ b/doc/doc_src/detectors/tracker/04-Reconstruction/04-01-Hits-and-clusters/04-01-Hits-and-clusters.tex
@@ -1,5 +1,5 @@
 \subsection{Hits and clusters}
-\label{HtsClstrs}
+\label{SubSect:SciFiHtsClstrs}
 
 A track passing through a particular doublet layer produces scintillation light in one or at most two fibre channels. For each channel ``hit'', the tracker data acquisition system records the channel number, $n$, and the pulse height. After calibration, the pulse height is recorded in terms of the number of photo-electrons ($n_{\rm pe}$) generated in the Visible Light Photon Counter (VLPC) illuminated by the hit channel. Occasionally, showers of particles or noise can cause three or more neighbouring channels to be hit. The term ``clusters'' is used to refer to an isolated hit, a doublet cluster and a multi-hit cluster.
 
