--- a/doc/doc_src/detectors/tracker/04-Reconstruction/04-04-Track-fit/04-04-Track-fit.tex
+++ b/doc/doc_src/detectors/tracker/04-Reconstruction/04-04-Track-fit/04-04-Track-fit.tex
@@ -1,23 +1,3 @@
 \subsection{Track fit}
+\label{SubSect:SciFiTrackFit}
 
-\begin{equation}
- \left( 
-   \begin{array}{c}
-   x \\ x \\ x \\ x \\ x
-   \end{array}
- \right)
- =
- \left( \begin{array}{ccccc}
-         a & b & c & d & e \\
-         a & b & c & d & e \\
-         a & b & c & d & e \\
-         a & b & c & d & e \\
-         a & b & c & d & e
-        \end{array}
- \right)
- \left( 
-   \begin{array}{c}
-   x \\ x \\ x \\ x \\ x
-   \end{array}
- \right)
-\end{equation}
