--- a/doc/doc_src/detectors/tracker/04-Reconstruction/04-Reconstruction.tex
+++ b/doc/doc_src/detectors/tracker/04-Reconstruction/04-Reconstruction.tex
@@ -1,5 +1,5 @@
-\section{Reconstruction}
-\label{Sect:Recons}
+\section{Reconstruction Algorithms}
+\label{Sect:SciFiReconstructionAlgorithms}
 
 \input{detectors/tracker/04-Reconstruction/04-01-Hits-and-clusters/04-01-Hits-and-clusters}
 \input{detectors/tracker/04-Reconstruction/04-02-Space-points/04-02-Space-points}
